--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+@import "./css/index.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
